# NaiveRAG

./: .gitignore  README.md  config.yaml  pyproject.toml  run.py
rag_pipeline/: base.py  naiverag.py
rag_pipeline/api/: base.py  gemini.py
rag_pipeline/chunking/: base.py  token_size.py
rag_pipeline/db/: base.py  nano_vdb.py
util/: check_db.py  load_config.py  process_docs.py  timer.py
